调整项目代码结构
