# docs/swagger.json
@@ -2,22 +2,67 @@
     "swagger": "2.0",
     "info": {
         "description": "This is a sample server Petstore server.",
-        "title": "Hello World",
-        "termsOfService": "http://swagger.io/terms/",
+        "title": "GinDemo",
+        "termsOfService": "http://127.0.0.1:8080",
         "contact": {
             "name": "API Support",
             "url": "http://www.swagger.io/support",
             "email": "support@swagger.io"
         },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
         "version": "1.0"
     },
     "host": "petstore.swagger.io",
-    "basePath": "/v1",
+    "basePath": "/api/v1",
     "paths": {
+        "/api/v1/collectors": {
+            "get": {
+                "description": "查询采集器列表",
+                "tags": [
+                    "Collector"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "页数",
+                        "name": "PageNum",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "页大小",
+                        "name": "PageSize",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            },
+            "post": {
+                "description": "创建采集器",
+                "tags": [
+                    "Collector"
+                ],
+                "parameters": [
+                    {
+                        "description": "创建参数",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CollectorDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/api/v1/projects": {
             "get": {
                 "description": "查询项目列表",
@@ -91,12 +136,10 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
                         "description": "结束时间",
-                        "name": "body",
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/definitions/dto.UserDto"
-                        }
+                        "name": "end_time",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -108,33 +151,68 @@
         }
     },
     "definitions": {
-        "dto.UserDto": {
+        "dto.CollectorDto": {
             "type": "object",
             "required": [
-                "password",
-                "sex",
-                "username"
+                "cluster",
+                "envId",
+                "name",
+                "planId",
+                "projectId"
             ],
             "properties": {
-                "birthday": {
+                "alertCnt": {
+                    "type": "integer"
+                },
+                "alertUrl": {
+                    "type": "string"
+                },
+                "appId": {
+                    "type": "integer"
+                },
+                "cluster": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "enabled": {
+                    "type": "integer"
+                },
+                "envId": {
+                    "type": "integer"
+                },
+                "envName": {
+                    "type": "string"
+                },
+                "execCnt": {
+                    "type": "integer"
+                },
+                "heartBeatInterval": {
+                    "type": "integer"
+                },
+                "heartBeatUrl": {
+                    "type": "string"
+                },
+                "metricUrl": {
                     "type": "string"
                 },
                 "name": {
                     "type": "string"
                 },
-                "pageNum": {
+                "planId": {
                     "type": "integer"
                 },
-                "pageSize": {
-                    "type": "integer"
-                },
-                "password": {
+                "projectCode": {
                     "type": "string"
                 },
-                "sex": {
+                "projectId": {
                     "type": "integer"
                 },
-                "username": {
+                "tokenRefreshInterval": {
+                    "type": "integer"
+                },
+                "tokenUrl": {
                     "type": "string"
                 }
             }
